:refactor: Refactor backoffice APIs to use unified response wrapper and DTOs
- Introduced ApiResponse<T> for consistent success/fail payloads
- Converted Category, Brand, and Product controllers to return ApiResponse<DTO>
- Created response DTOs (CategoryResponse, BrandResponse, ProductResponse)
- Updated service layer to accept primitive parameters and return entities
- Enhanced unit tests for services with ArgumentCaptor and separate success/failure cases
- Revised integration tests to match new endpoints, payloads, and status codes